# vccc

./: .gitignore  CMakeLists.txt  Doxyfile  DoxygenLayout.xml  README.md  extrastylesheet.css
boost/pfr/: CMakeLists.txt
directory/test/: CMakeLists.txt  directory_test.cc
experimental/: CMakeLists.txt
experimental/include/vccc/experimental/: signal.hpp
experimental/include/vccc/experimental/signal/: connection.h  forward_declare.h  group_key.h  signal.h  slot.h  slot_group.h
experimental/test/: CMakeLists.txt  signal_test.cc
high/test/: CMakeLists.txt  functional_test.cpp  main.cpp  test_core.hpp
high/test/vccc/high/: Makefile  cmake_install.cmake  vccc_high.cbp
include/algorithm/: CMakeLists.txt
include/algorithm/include/vccc/: algorithm.hpp
include/algorithm/include/vccc/__algorithm/: equal.hpp  find_if.hpp  in_out_result.hpp  swap_ranges.hpp
include/algorithm/include/vccc/algorithm/: min.hpp  min_element.hpp
include/algorithm/test/: CMakeLists.txt  algorithm_test.cpp
include/concepts/: CMakeLists.txt
include/concepts/include/vccc/: concepts.hpp
include/concepts/include/vccc/__concepts/: convertible_to.hpp  derived_from_single_crtp.hpp  equivalence_relation.hpp  invocable.hpp  movable.hpp  partially_ordered_with.hpp  same_as.hpp
include/concepts/include/vccc/concepts/: assignable_from.hpp  boolean_testable.hpp  common_reference_with.hpp  common_with.hpp  comparison_common_type_with.hpp  constructible_from.hpp  convertible_to.hpp  copy_constructible.hpp  copyable.hpp  default_initializable.hpp  dereferenceable.hpp  derived_from.hpp  derived_from_single_crtp.hpp  destructible.hpp  equality_comparable.hpp  equivalence_relation.hpp  floating_point.hpp  implicit_expression_check.hpp  invocable.hpp  movable.hpp  move_constructible.hpp  partially_ordered_with.hpp  predicate.hpp  regular.hpp  relation.hpp  same_as.hpp  semiregular.hpp  signed_integral.hpp  strict_weak_order.hpp  subtractable.hpp  swap.hpp  swappable.hpp  totally_ordered.hpp  unsigned_integral.hpp  weakly_equality_comparable_with.hpp
include/concepts/test/: CMakeLists.txt  concepts_test.cpp
include/core/: CMakeLists.txt
include/core/include/vccc/: core.hpp
include/core/include/vccc/__core/: byte.hpp  decay_copy.hpp  nodiscard.hpp
include/core/include/vccc/core/: byte.hpp  nodiscard.hpp
include/core/test/: CMakeLists.txt  core_test.cpp
include/directory/: CMakeLists.txt
include/directory/include/vccc/: directory.hpp
include/directory/include/vccc/__directory/: directory.h
include/directory/include/vccc/directory/: directory.h
include/functional/: CMakeLists.txt
include/functional/include/vccc/: functional.hpp
include/functional/include/vccc/__functional/: invoke.hpp
include/functional/test/: CMakeLists.txt
include/iterator/: CMakeLists.txt
include/iterator/include/vccc/: iterator.hpp
include/iterator/test/: CMakeLists.txt  iterator_test.cpp
include/log/: CMakeLists.txt
include/log/include/vccc/: log.hpp
include/log/include/vccc/__log/: iomanip.hpp  (+6 more)
include/log/test/: CMakeLists.txt
include/math/: CMakeLists.txt
include/math/include/vccc/: math.hpp
include/math/test/: CMakeLists.txt
include/numeric/: CMakeLists.txt
include/numeric/include/vccc/: numeric.hpp
include/numeric/test/: CMakeLists.txt  numeric_test.cpp
include/optional/: CMakeLists.txt
include/optional/include/vccc/: LICENSE  optional.hpp
include/optional/test/: CMakeLists.txt  optional_test.cpp
include/ranges/: CMakeLists.txt
include/ranges/include/vccc/: ranges.hpp
include/ranges/test/: CMakeLists.txt  ranges_test.cpp
include/signal/: CMakeLists.txt
include/signal/include/vccc/: signal.hpp
include/signal/test/: CMakeLists.txt  signal_test.cc
include/span/: CMakeLists.txt
include/span/include/vccc/: span.hpp
include/span/test/: CMakeLists.txt
include/string_view/: CMakeLists.txt
include/string_view/include/vccc/: string_view.hpp
include/string_view/test/: CMakeLists.txt  string_view_test.cpp
include/tuple/: CMakeLists.txt
include/tuple/include/vccc/: tuple.hpp
include/tuple/test/: CMakeLists.txt  tuple_test.cpp
include/type_support/: CMakeLists.txt
include/type_support/include/vccc/: type_support.hpp
include/type_support/test/: test_core.hpp  ts_test.cpp
include/type_traits/: CMakeLists.txt
include/type_traits/include/vccc/: type_traits.hpp
include/type_traits/test/: type_traits_test.cpp
literal/: CMakeLists.txt  README.md
literal/include/vccc/: literal.hpp
literal/include/vccc/literal/: formatter.hpp
literal/include/vcpp/: literal.hpp
literal/include/vcpp/literal/: formatter.hpp
log/: CMakeLists.txt
log/include/vccc/: log.hpp
log/include/vccc/log/: function_macro.hpp  ios_flags_saver.hpp  log.hpp  logger.hpp  macro.hpp  pwd.hpp  stream_wrapper.hpp
log/include/vcpp/: log.hpp
log/include/vcpp/log/: logger.hpp  macro.hpp
log/test/: CMakeLists.txt  log_test.cpp
math/test/: CMakeLists.txt  math_test.cpp
test/: CMakeLists.txt  algorithm_test.cpp  concepts_test.cpp  core_test.cpp  directory_test.cc  expected_test.cpp  functional_test.cpp  iterator_test.cpp  log_test.cpp  optional_test.cpp  ranges_test.cpp  signal_test.cc  span_test.cpp  string_view_test.cpp  test_core.hpp  test_high.cpp  tuple_test.cpp  type_support_test.cpp  type_traits_test.cpp  variant_test.cpp
test/include/vccc/: test.hpp
type_support/: CMakeLists.txt
type_support/include/vccc/: type_support.hpp
type_support/include/vccc/type_support/: at.hpp  back_emplace.hpp  cast.hpp  convert_to.hpp  core.hpp  etc.hpp  library_config.hpp  opencv_size.hpp  resize.hpp  vtype_convert.hpp
type_support/include/vcpp/: type_support.hpp
type_support/include/vcpp/type_support/: convert_to.hpp  etc.hpp  opencv_size.hpp  resize.hpp  vtype_convert.hpp
type_support/test/: CMakeLists.txt  ts_test.cpp
utility/: CMakeLists.txt
utility/include/vccc/: utility.hpp
utility/include/vccc/utility/: assert.h  assert.hpp  at.hpp  bind_at.hpp  sequence.hpp  time.hpp
utility/include/vcpp/: utility.hpp
utility/include/vcpp/utility/: at.hpp  sequence.hpp  time.hpp
(+6031 files in other folders)
