cmake_minimum_required(VERSION 3.5)

VCCC_TEST(algorithm_test algorithm_test.cpp VCCC)
VCCC_TEST(concepts_test concepts_test.cpp VCCC)
VCCC_TEST(core_test core_test.cpp VCCC)
VCCC_TEST(functional_test functional_test.cpp VCCC)
VCCC_TEST(iterator_test iterator_test.cpp VCCC)
VCCC_TEST(numeric_test numeric_test.cpp VCCC)
VCCC_TEST(optional_test optional_test.cpp VCCC)
VCCC_TEST(ranges_test ranges_test.cpp VCCC)
VCCC_TEST(span_test span_test.cpp VCCC)
VCCC_TEST(string_view_test string_view_test.cpp VCCC)
VCCC_TEST(tuple_test tuple_test.cpp VCCC)
VCCC_TEST(type_traits_test type_traits_test.cpp VCCC)
VCCC_TEST(variant_test variant_test.cpp VCCC)

if (NOT ANDROID)
    VCCC_TEST_ONE_CXX(directory_test directory_test.cc 17 VCCC)
endif()
VCCC_TEST(log_test log_test.cpp VCCC)
VCCC_TEST(math_test math_test.cpp VCCC)
VCCC_TEST(signal_test signal_test.cc VCCC)

option(VCCC_TEST_SYSTEM_OPENCV "Use system installed OpenCV on test" OFF)

if(VCCC_TEST_SYSTEM_OPENCV)
    find_package(OpenCV REQUIRED)
    VCCC_TEST(type_support_test type_support_test.cpp VCCC::type_support ${OpenCV_LIBS})
    VCCC_TEST_INCLUDE(type_support_test PUBLIC ${OpenCV_INCLUDE_DIRS})
else()
    VCCC_TEST(type_support_test type_support_test.cpp VCCC::type_support)
endif()
